syntax = "proto3";

option java_package = "com.trs.pacifica.example.counter";
option java_outer_classname = "CounterRpc";

message ErrorResponse {
  optional int32 code = 1;
  optional string msg = 2;
}

message IncrementAndGetRequest {
  optional string group_name = 1;
  optional string node_id = 2;
  optional int64 delta = 3;
}

message IncrementAndGetResponse {
  optional int64 value = 1;
  optional ErrorResponse error = 2;
}